--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <html>
-  <h1>This is my P   odanielwasilrtftestolio With It's first committ</h1>
+  <head> 
+    <title></title>
+  </head>
 </html> 
