Wrote a lot, added an image of drone.
I should organize the image later, and create some cool js elements.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,46 @@
-<html>
-  <head> 
-    <title></title>
+<!DOCTYPE html>
+<html lang = "en-CA">
+  <head>
+    <title>Daniels Weekly Coding Journey</title>
   </head>
-</html> 
+  <body>
+    <h1>Daniels Coding Hub </h1>
+    <h2> Including Weekly Journal, Class projects, and useful bookmarks.</h2>
+    <h3>Week 1</h3>
+    <p>Welcome to week 1 of learning in ICS3U. This week we have setup all the websites we will be using, setup VS Code, and started a Github Page.</p>
+    <p>Below, I will be showcasing the Headings that I am learning from W3Schools</p>
+    <h1>H1 Heading</h1>
+    <h2>H2 Heading</h2>
+    <h3>H3 Heading</h3>
+    <h4>H4 Heading</h4>
+    <h5>H5 Heading</h5>
+    <h6>H6 Heading</h6>
+    <p>The heading sizes only run through h1 to h6.</p>
+    <h3>Continuing the lesson..</h3>
+    <p> I am now learning how to link websites. <a href="https://google.com"> Here is the link to Google. </a> As you can see, there is the link to Google. I did this by first using the a tag, and then linking the site.</a></p>
+    <img src ="https://images.unsplash.com/photo-1523049673857-eb18f1d7b578?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8cmFuZG9tJTIwb2JqZWN0c3xlbnwwfHwwfHx8MA%3D%3D" alt = "Avacado from Mexico" width = "500" height = "200">
+    <p> As you can see above, I added an image of a stretched avacado. This avacado is stretched, because when adding images using the img tag in html, you can specific the height = "whatever" and the width = "whatever". I set the width to be significantly larger than the height. Now I will use <br> the break <br> tag <br> to <br> go <br> down. <br></p>
+    <h3>Linking Images and Links in practice</h3>
+    <img src="/DJI_0524.jpg" alt = "Ben's Drone shot" height = "150px">
+    <p> Above is an image of my friend <a href="instagram.com/benmmonster"> Ben's</a> drone image. He took this with his <a href="https://www.dji.com/ca/mini-2"> DJI Mavic 2 Mini</a> which he got for Christmas.</p>
+    <h3 style="color:purple;">Using Colors</h3>
+    <p> Another interesting aspect of HTML is that you can use colors.</p>
+    <p style="color:blue"> This paragraph is blue</p>
+    <p style="color:yellow"> This paragraph is yellow</p>
+    <p style="color:green"> This paragraph is green</p>
+    <p style="color:white"> This color is white (you are smart if you found this)</p>
+    <h3 title="I'm a tooltip" style="color:blueviolet">Tooltips</h3>
+    <p title="Even this!"> If you hover over the "Tooltips" heading, you will see that something will appear!</p>
+    <p style="font-size: x-large;">You can specify the size of elements. This element is a paragraph!</p>
+    <p style="background-color: aqua;color: black; font-size: large;">You can even specify the background color of elements</p>
+    <h3 style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Font Families</h3>
+    <p style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;"> In HTML/css you can specify which font family you want to use. <br> <br> This allows you to customize the website to your liking.</p>
+    <p style="text-align: right;">This text is on the right</p>
+    <p style="text-align: left;">This text is on the left</p>
+    <p style="text-align: center; font-family: Verdana, Geneva, Tahoma, sans-serif
+    ;">This text is in the center AND IS A DIFFERENT FONT</p>
+    <p> Something that I think would help people which are creating chemistry websites would be <sub> Subscripts! </sub>. You also have the option to create <sup> Superscripts! </sup>. <br> <br> <i>This is in italic</i>. <b>This is in bold</b>. <u> this is underlined</u>. <u><b><i> This has all of them combined</i></b></u> <br> Text can also be <em> Emphasized</em>. Or it can be <small> Small</small></p>
+    <p> Do not forget about the <mark>mark</mark> feature. If you do not need something just <del>del it!</del></p>
+    
+  </body>
+</html>
