--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Daniels Weekly Coding Journey</title>
   </head>
   <body>
+    <p><a href="Learning-Things/HTML-CSS/learning-2.html"> Learning Day 2</a></p>
     <h1>Daniels Coding Hub </h1>
     <h2> Including Weekly Journal, Class projects, and useful bookmarks.</h2>
     <h3>Week 1</h3>
